[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/themes/kenneyUI-red.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/VCRosdNEUE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/audio/483598__raclure__wrong.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/242501__gabrielaraujo__powerupsuccess.wav" type="AudioStream" id=4]
[ext_resource path="res://minigames/labyrinthofrule3/characters/enemies/Slime.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/labyrinthofrule3/collectibles/Pickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://minigames/labyrinthofrule3/characters/enemies/Ghost.tscn" type="PackedScene" id=7]
[ext_resource path="res://minigames/labyrinthofrule3/characters/enemies/Spider.tscn" type="PackedScene" id=8]
[ext_resource path="res://minigames/labyrinthofrule3/ui/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://minigames/labyrinthofrule3/characters/player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://minigames/labyrinthofrule3/tileset/tileset.tres" type="TileSet" id=11]
[ext_resource path="res://minigames/labyrinthofrule3/levels/Level0LR3.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Level0LR3" type="Node2D"]
script = ExtResource( 12 )
Enemy_1 = ExtResource( 7 )
Enemy_2 = ExtResource( 5 )
Enemy_3 = ExtResource( 8 )
Pickup = ExtResource( 6 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
tile_data = PoolIntArray( -327688, 48, 0, -327687, 48, 0, -327686, 48, 0, -327685, 48, 0, -327684, 48, 0, -327683, 48, 0, -327682, 48, 0, -327681, 48, 0, -393216, 48, 0, -393215, 48, 0, -393214, 48, 0, -393213, 48, 0, -393212, 48, 0, -393211, 48, 0, -393210, 48, 0, -393209, 48, 0, -393208, 48, 0, -393207, 48, 0, -393206, 48, 0, -393205, 48, 0, -393204, 48, 0, -393203, 48, 0, -393202, 48, 0, -393201, 48, 0, -393200, 48, 0, -393199, 48, 0, -393198, 48, 0, -393197, 48, 0, -393196, 48, 0, -393195, 48, 0, -393194, 48, 0, -262152, 48, 0, -262151, 48, 0, -262150, 48, 0, -262149, 48, 0, -262148, 48, 0, -262147, 48, 0, -262146, 48, 0, -262145, 48, 0, -327680, 48, 0, -327679, 48, 0, -327678, 48, 0, -327677, 48, 0, -327676, 48, 0, -327675, 48, 0, -327674, 48, 0, -327673, 48, 0, -327672, 48, 0, -327671, 48, 0, -327670, 48, 0, -327669, 48, 0, -327668, 48, 0, -327667, 48, 0, -327666, 48, 0, -327665, 48, 0, -327664, 48, 0, -327663, 48, 0, -327662, 48, 0, -327661, 48, 0, -327660, 48, 0, -327659, 48, 0, -327658, 48, 0, -196616, 48, 0, -196615, 48, 0, -196614, 48, 0, -196613, 48, 0, -196612, 48, 0, -196611, 48, 0, -196610, 48, 0, -196609, 48, 0, -262144, 48, 0, -262143, 48, 0, -262142, 48, 0, -262141, 48, 0, -262140, 48, 0, -262139, 48, 0, -262138, 48, 0, -262137, 48, 0, -262136, 48, 0, -262135, 48, 0, -262134, 48, 0, -262133, 48, 0, -262132, 48, 0, -262131, 48, 0, -262130, 48, 0, -262129, 48, 0, -262128, 48, 0, -262127, 48, 0, -262126, 48, 0, -262125, 48, 0, -262124, 48, 0, -262123, 48, 0, -262122, 48, 0, -131080, 48, 0, -131079, 48, 0, -131078, 48, 0, -131077, 48, 0, -131076, 48, 0, -131075, 48, 0, -131074, 48, 0, -131073, 48, 0, -196608, 48, 0, -196607, 48, 0, -196606, 48, 0, -196605, 48, 0, -196604, 48, 0, -196603, 48, 0, -196602, 48, 0, -196601, 48, 0, -196600, 48, 0, -196599, 48, 0, -196598, 48, 0, -196597, 48, 0, -196596, 48, 0, -196595, 48, 0, -196594, 48, 0, -196593, 48, 0, -196592, 48, 0, -196591, 48, 0, -196590, 48, 0, -196589, 48, 0, -196588, 48, 0, -196587, 48, 0, -196586, 48, 0, -65544, 48, 0, -65543, 48, 0, -65542, 48, 0, -65541, 48, 0, -65540, 48, 0, -65539, 48, 0, -65538, 48, 0, -65537, 48, 0, -131072, 48, 0, -131071, 48, 0, -131070, 48, 0, -131069, 48, 0, -131068, 48, 0, -131067, 48, 0, -131066, 48, 0, -131065, 48, 0, -131064, 48, 0, -131063, 48, 0, -131062, 48, 0, -131061, 48, 0, -131060, 48, 0, -131059, 48, 0, -131058, 48, 0, -131057, 48, 0, -131056, 48, 0, -131055, 48, 0, -131054, 48, 0, -131053, 48, 0, -131052, 48, 0, -131051, 48, 0, -131050, 48, 0, -8, 48, 0, -7, 48, 0, -6, 48, 0, -5, 48, 0, -4, 48, 0, -3, 48, 0, -2, 48, 0, -1, 48, 0, -65536, 48, 0, -65535, 48, 0, -65534, 48, 0, -65533, 48, 0, -65532, 48, 0, -65531, 48, 0, -65530, 48, 0, -65529, 48, 0, -65528, 48, 0, -65527, 48, 0, -65526, 48, 0, -65525, 48, 0, -65524, 48, 0, -65523, 48, 0, -65522, 48, 0, -65521, 48, 0, -65520, 48, 0, -65519, 48, 0, -65518, 48, 0, -65517, 48, 0, -65516, 48, 0, -65515, 48, 0, -65514, 48, 0, 65528, 48, 0, 65529, 48, 0, 65530, 48, 0, 65531, 48, 0, 65532, 48, 0, 65533, 48, 0, 65534, 48, 0, 65535, 48, 0, 0, 48, 0, 1, 48, 0, 2, 48, 0, 3, 48, 0, 4, 48, 0, 5, 48, 0, 6, 48, 0, 7, 48, 0, 8, 48, 0, 9, 48, 0, 10, 48, 0, 11, 48, 0, 12, 48, 0, 13, 48, 0, 14, 48, 0, 15, 48, 0, 16, 48, 0, 17, 48, 0, 18, 48, 0, 19, 48, 0, 20, 48, 0, 21, 48, 0, 22, 48, 0, 131064, 48, 0, 131065, 48, 0, 131066, 48, 0, 131067, 48, 0, 131068, 48, 0, 131069, 48, 0, 131070, 48, 0, 131071, 48, 0, 65536, 48, 0, 65537, 48, 0, 65538, 48, 0, 65539, 48, 0, 65540, 48, 0, 65541, 48, 0, 65542, 48, 0, 65543, 48, 0, 65544, 48, 0, 65545, 48, 0, 65546, 48, 0, 65547, 48, 0, 65548, 48, 0, 65549, 48, 0, 65550, 48, 0, 65551, 48, 0, 65552, 48, 0, 65553, 48, 0, 65554, 48, 0, 65555, 48, 0, 65556, 48, 0, 65557, 48, 0, 65558, 48, 0, 196600, 48, 0, 196601, 48, 0, 196602, 48, 0, 196603, 48, 0, 196604, 48, 0, 196605, 48, 0, 196606, 48, 0, 196607, 48, 0, 131072, 48, 0, 131073, 48, 0, 131074, 48, 0, 131075, 48, 0, 131076, 48, 0, 131077, 48, 0, 131078, 48, 0, 131079, 48, 0, 131080, 48, 0, 131081, 48, 0, 131082, 48, 0, 131083, 48, 0, 131084, 48, 0, 131085, 48, 0, 131086, 48, 0, 131087, 48, 0, 131088, 48, 0, 131089, 48, 0, 131090, 48, 0, 131091, 48, 0, 131092, 48, 0, 131093, 48, 0, 131094, 48, 0, 262136, 48, 0, 262137, 48, 0, 262138, 48, 0, 262139, 48, 0, 262140, 48, 0, 262141, 48, 0, 262142, 48, 0, 262143, 48, 0, 196608, 48, 0, 196609, 48, 0, 196610, 48, 0, 196611, 48, 0, 196612, 48, 0, 196613, 48, 0, 196614, 48, 0, 196615, 48, 0, 196616, 48, 0, 196617, 48, 0, 196618, 48, 0, 196619, 48, 0, 196620, 48, 0, 196621, 48, 0, 196622, 48, 0, 196623, 48, 0, 196624, 48, 0, 196625, 48, 0, 196626, 48, 0, 196627, 48, 0, 196628, 48, 0, 196629, 48, 0, 196630, 48, 0, 327672, 48, 0, 327673, 48, 0, 327674, 48, 0, 327675, 48, 0, 327676, 48, 0, 327677, 48, 0, 327678, 48, 0, 327679, 48, 0, 262144, 48, 0, 262145, 48, 0, 262146, 48, 0, 262147, 48, 0, 262148, 48, 0, 262149, 48, 0, 262150, 48, 0, 262151, 48, 0, 262152, 48, 0, 262153, 48, 0, 262154, 48, 0, 262155, 48, 0, 262156, 48, 0, 262157, 48, 0, 262158, 48, 0, 262159, 48, 0, 262160, 48, 0, 262161, 48, 0, 262162, 48, 0, 262163, 48, 0, 262164, 48, 0, 262165, 48, 0, 262166, 48, 0, 393208, 48, 0, 393209, 48, 0, 393210, 48, 0, 393211, 48, 0, 393212, 48, 0, 393213, 48, 0, 393214, 48, 0, 393215, 48, 0, 327680, 48, 0, 327681, 48, 0, 327682, 48, 0, 327683, 48, 0, 327684, 48, 0, 327685, 48, 0, 327686, 48, 0, 327687, 48, 0, 327688, 48, 0, 327689, 48, 0, 327690, 48, 0, 327691, 48, 0, 327692, 48, 0, 327693, 48, 0, 327694, 48, 0, 327695, 48, 0, 327696, 48, 0, 327697, 48, 0, 327698, 48, 0, 327699, 48, 0, 327700, 48, 0, 327701, 48, 0, 327702, 48, 0, 458744, 48, 0, 458745, 48, 0, 458746, 48, 0, 458747, 48, 0, 458748, 48, 0, 458749, 48, 0, 458750, 48, 0, 458751, 48, 0, 393216, 48, 0, 393217, 48, 0, 393218, 48, 0, 393219, 48, 0, 393220, 48, 0, 393221, 48, 0, 393222, 48, 0, 393223, 48, 0, 393224, 48, 0, 393225, 48, 0, 393226, 48, 0, 393227, 48, 0, 393228, 48, 0, 393229, 48, 0, 393230, 48, 0, 393231, 48, 0, 393232, 48, 0, 393233, 48, 0, 393234, 48, 0, 393235, 48, 0, 393236, 48, 0, 393237, 48, 0, 393238, 48, 0, 524280, 48, 0, 524281, 48, 0, 524282, 48, 0, 524283, 48, 0, 524284, 48, 0, 524285, 48, 0, 524286, 48, 0, 524287, 48, 0, 458752, 48, 0, 458753, 48, 0, 458754, 48, 0, 458755, 48, 0, 458756, 48, 0, 458757, 48, 0, 458758, 48, 0, 458759, 48, 0, 458760, 48, 0, 458761, 48, 0, 458762, 48, 0, 458763, 48, 0, 458764, 48, 0, 458765, 48, 0, 458766, 48, 0, 458767, 48, 0, 458768, 48, 0, 458769, 48, 0, 458770, 48, 0, 458771, 48, 0, 458772, 48, 0, 458773, 48, 0, 458774, 48, 0, 589816, 48, 0, 589817, 48, 0, 589818, 48, 0, 589819, 48, 0, 589820, 48, 0, 589821, 48, 0, 589822, 48, 0, 589823, 48, 0, 524288, 48, 0, 524289, 48, 0, 524290, 48, 0, 524291, 48, 0, 524292, 48, 0, 524293, 48, 0, 524294, 48, 0, 524295, 48, 0, 524296, 48, 0, 524297, 48, 0, 524298, 48, 0, 524299, 48, 0, 524300, 48, 0, 524301, 48, 0, 524302, 48, 0, 524303, 48, 0, 524304, 48, 0, 524305, 48, 0, 524306, 48, 0, 524307, 48, 0, 524308, 48, 0, 524309, 48, 0, 524310, 48, 0, 655352, 48, 0, 655353, 48, 0, 655354, 48, 0, 655355, 48, 0, 655356, 48, 0, 655357, 48, 0, 655358, 48, 0, 655359, 48, 0, 589824, 48, 0, 589825, 48, 0, 589826, 48, 0, 589827, 48, 0, 589828, 48, 0, 589829, 48, 0, 589830, 48, 0, 589831, 48, 0, 589832, 48, 0, 589833, 48, 0, 589834, 48, 0, 589835, 48, 0, 589836, 48, 0, 589837, 48, 0, 589838, 48, 0, 589839, 48, 0, 589840, 48, 0, 589841, 48, 0, 589842, 48, 0, 589843, 48, 0, 589844, 48, 0, 589845, 48, 0, 589846, 48, 0, 720888, 48, 0, 720889, 48, 0, 720890, 48, 0, 720891, 48, 0, 720892, 48, 0, 720893, 48, 0, 720894, 48, 0, 720895, 48, 0, 655360, 48, 0, 655361, 48, 0, 655362, 48, 0, 655363, 48, 0, 655364, 48, 0, 655365, 48, 0, 655366, 48, 0, 655367, 48, 0, 655368, 48, 0, 655369, 48, 0, 655370, 48, 0, 655371, 48, 0, 655372, 48, 0, 655373, 48, 0, 655374, 48, 0, 655375, 48, 0, 655376, 48, 0, 655377, 48, 0, 655378, 48, 0, 655379, 48, 0, 655380, 48, 0, 655381, 48, 0, 655382, 48, 0, 786424, 48, 0, 786425, 48, 0, 786426, 48, 0, 786427, 48, 0, 786428, 48, 0, 786429, 48, 0, 786430, 48, 0, 786431, 48, 0, 720896, 48, 0, 720897, 48, 0, 720898, 48, 0, 720899, 48, 0, 720900, 48, 0, 720901, 48, 0, 720902, 48, 0, 720903, 48, 0, 720904, 48, 0, 720905, 48, 0, 720906, 48, 0, 720907, 48, 0, 720908, 48, 0, 720909, 48, 0, 720910, 48, 0, 720911, 48, 0, 720912, 48, 0, 720913, 48, 0, 720914, 48, 0, 720915, 48, 0, 720916, 48, 0, 720917, 48, 0, 720918, 48, 0, 851960, 48, 0, 851961, 48, 0, 851962, 48, 0, 851963, 48, 0, 851964, 48, 0, 851965, 48, 0, 851966, 48, 0, 851967, 48, 0, 786432, 48, 0, 786433, 48, 0, 786434, 48, 0, 786435, 48, 0, 786436, 48, 0, 786437, 48, 0, 786438, 48, 0, 786439, 48, 0, 786440, 48, 0, 786441, 48, 0, 786442, 48, 0, 786443, 48, 0, 786444, 48, 0, 786445, 48, 0, 786446, 48, 0, 786447, 48, 0, 786448, 48, 0, 786449, 48, 0, 786450, 48, 0, 786451, 48, 0, 786452, 48, 0, 786453, 48, 0, 786454, 48, 0, 917496, 48, 0, 917497, 48, 0, 917498, 48, 0, 917499, 48, 0, 917500, 48, 0, 917501, 48, 0, 917502, 48, 0, 917503, 48, 0, 851968, 48, 0, 851969, 48, 0, 851970, 48, 0, 851971, 48, 0, 851972, 48, 0, 851973, 48, 0, 851974, 48, 0, 851975, 48, 0, 851976, 48, 0, 851977, 48, 0, 851978, 48, 0, 851979, 48, 0, 851980, 48, 0, 851981, 48, 0, 851982, 48, 0, 851983, 48, 0, 851984, 48, 0, 851985, 48, 0, 851986, 48, 0, 851987, 48, 0, 851988, 48, 0, 851989, 48, 0, 851990, 48, 0, 983032, 48, 0, 983033, 48, 0, 983034, 48, 0, 983035, 48, 0, 983036, 48, 0, 983037, 48, 0, 983038, 48, 0, 983039, 48, 0, 917504, 48, 0, 917505, 48, 0, 917506, 48, 0, 917507, 48, 0, 917508, 48, 0, 917509, 48, 0, 917510, 48, 0, 917511, 48, 0, 917512, 48, 0, 917513, 48, 0, 917514, 48, 0, 917515, 48, 0, 917516, 48, 0, 917517, 48, 0, 917518, 48, 0, 917519, 48, 0, 917520, 48, 0, 917521, 48, 0, 917522, 48, 0, 917523, 48, 0, 917524, 48, 0, 917525, 48, 0, 917526, 48, 0, 1048568, 48, 0, 1048569, 48, 0, 1048570, 48, 0, 1048571, 48, 0, 1048572, 48, 0, 1048573, 48, 0, 1048574, 48, 0, 1048575, 48, 0, 983040, 48, 0, 983041, 48, 0, 983042, 48, 0, 983043, 48, 0, 983044, 48, 0, 983045, 48, 0, 983046, 48, 0, 983047, 48, 0, 983048, 48, 0, 983049, 48, 0, 983050, 48, 0, 983051, 48, 0, 983052, 48, 0, 983053, 48, 0, 983054, 48, 0, 983055, 48, 0, 983056, 48, 0, 983057, 48, 0, 983058, 48, 0, 983059, 48, 0, 983060, 48, 0, 983061, 48, 0, 983062, 48, 0, 1114104, 48, 0, 1114105, 48, 0, 1114106, 48, 0, 1114107, 48, 0, 1114108, 48, 0, 1114109, 48, 0, 1114110, 48, 0, 1114111, 48, 0, 1048576, 48, 0, 1048577, 48, 0, 1048578, 48, 0, 1048579, 48, 0, 1048580, 48, 0, 1048581, 48, 0, 1048582, 48, 0, 1048583, 48, 0, 1048584, 48, 0, 1048585, 48, 0, 1048586, 48, 0, 1048587, 48, 0, 1048588, 48, 0, 1048589, 48, 0, 1048590, 48, 0, 1048591, 48, 0, 1048592, 48, 0, 1048593, 48, 0, 1048594, 48, 0, 1048595, 48, 0, 1048596, 48, 0, 1048597, 48, 0, 1048598, 48, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
tile_data = PoolIntArray( -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -393201, 0, 0, -393200, 0, 0, -393199, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -196616, 0, 0, -196615, 0, 0, -196611, 14, 0, -262138, 28, 0, -262137, 28, 0, -262136, 28, 0, -262132, 14, 0, -262127, 14, 0, -262123, 0, 0, -262122, 0, 0, -131080, 0, 0, -131079, 0, 0, -131075, 61, 0, -196608, 23, 0, -196607, 23, 0, -196606, 23, 0, -196605, 14, 0, -196596, 14, 0, -196594, 14, 0, -196591, 63, 0, -196587, 0, 0, -196586, 0, 0, -65544, 0, 0, -65543, 0, 0, -65539, 14, 0, -131069, 14, 0, -131068, 14, 0, -131058, 14, 0, -131055, 14, 0, -131051, 0, 0, -131050, 0, 0, -8, 0, 0, -7, 0, 0, -6, 14, 0, -5, 14, 0, -4, 14, 0, -3, 14, 0, -65532, 14, 0, -65528, 23, 0, -65527, 14, 0, -65526, 14, 0, -65525, 14, 0, -65524, 33, 0, -65522, 14, 0, -65519, 14, 0, -65518, 14, 0, -65517, 14, 0, -65516, 14, 0, -65515, 0, 0, -65514, 0, 0, 65528, 0, 0, 65529, 0, 0, 12, 33, 0, 14, 14, 0, 21, 0, 0, 22, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 14, 0, 131067, 14, 0, 131068, 33, 0, 131069, 33, 0, 131070, 14, 0, 65537, 33, 0, 65538, 33, 0, 65539, 14, 0, 65541, 14, 0, 65548, 33, 0, 65550, 14, 0, 65557, 0, 0, 65558, 0, 0, 196600, 0, 0, 196601, 0, 0, 131073, 14, 0, 131077, 33, 0, 131086, 14, 0, 131087, 14, 0, 131088, 14, 0, 131089, 14, 0, 131090, 14, 0, 131091, 14, 0, 131092, 14, 0, 131093, 0, 0, 131094, 0, 0, 262136, 0, 0, 262137, 0, 0, 262141, 14, 0, 196609, 14, 0, 196611, 23, 0, 196613, 33, 0, 196616, 14, 0, 196617, 14, 0, 196618, 14, 0, 196619, 14, 0, 196620, 14, 0, 196628, 14, 0, 196629, 0, 0, 196630, 0, 0, 327672, 0, 0, 327673, 0, 0, 327677, 23, 0, 327679, 28, 0, 262148, 23, 0, 262158, 23, 0, 262161, 14, 0, 262162, 14, 0, 262163, 14, 0, 262164, 14, 0, 262165, 0, 0, 262166, 0, 0, 393208, 0, 0, 393209, 0, 0, 393213, 23, 0, 393215, 28, 0, 327697, 14, 0, 327701, 0, 0, 327702, 0, 0, 458744, 0, 0, 458745, 0, 0, 458749, 14, 0, 393218, 14, 0, 393219, 14, 0, 393220, 14, 0, 393221, 14, 0, 393227, 23, 0, 393231, 14, 0, 393233, 28, 0, 393234, 28, 0, 393237, 0, 0, 393238, 0, 0, 524280, 0, 0, 524281, 0, 0, 524285, 29, 0, 458757, 14, 0, 458758, 14, 0, 458759, 14, 0, 458760, 14, 0, 458761, 23, 0, 458762, 23, 0, 458763, 23, 0, 458764, 14, 0, 458767, 14, 0, 458773, 0, 0, 458774, 0, 0, 589816, 0, 0, 589817, 0, 0, 589820, 29, 0, 524290, 23, 0, 524300, 14, 0, 524303, 14, 0, 524309, 0, 0, 524310, 0, 0, 655352, 0, 0, 655353, 0, 0, 655357, 14, 0, 655358, 14, 0, 655359, 14, 0, 589824, 14, 0, 589826, 14, 0, 589833, 14, 0, 589834, 14, 0, 589835, 14, 0, 589836, 14, 0, 589839, 14, 0, 589845, 0, 0, 589846, 0, 0, 720888, 0, 0, 720889, 0, 0, 655360, 33, 0, 655362, 14, 0, 655363, 14, 0, 655364, 14, 0, 655367, 14, 0, 655372, 14, 0, 655375, 14, 0, 655381, 0, 0, 655382, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 14, 0, 786427, 14, 0, 786428, 14, 0, 786429, 14, 0, 720896, 33, 0, 720903, 33, 0, 720905, 14, 0, 720906, 14, 0, 720907, 14, 0, 720908, 14, 0, 720909, 14, 0, 720910, 14, 0, 720911, 14, 0, 720913, 14, 0, 720914, 14, 0, 720915, 14, 0, 720916, 14, 0, 720917, 0, 0, 720918, 0, 0, 851960, 0, 0, 851961, 0, 0, 851965, 14, 0, 786432, 14, 0, 786435, 14, 0, 786436, 14, 0, 786437, 14, 0, 786438, 14, 0, 786439, 33, 0, 786449, 14, 0, 786453, 0, 0, 786454, 0, 0, 917496, 0, 0, 917497, 0, 0, 917501, 65, 0, 851968, 14, 0, 851975, 33, 0, 851979, 14, 0, 851980, 33, 0, 851981, 33, 0, 851985, 67, 0, 851989, 0, 0, 851990, 0, 0, 983032, 0, 0, 983033, 0, 0, 983037, 14, 0, 917506, 14, 0, 917507, 14, 0, 917521, 14, 0, 917525, 0, 0, 917526, 0, 0, 1048568, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 1048571, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 1114104, 0, 0, 1114105, 0, 0, 1114106, 0, 0, 1114107, 0, 0, 1114108, 0, 0, 1114109, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
tile_data = PoolIntArray( -131077, 53, 0, -196589, 54, 0, -131065, 70, 0, -131055, 14, 0, 131077, 29, 0, 131081, 70, 0, 131085, 71, 0, 393211, 70, 0, 327687, 69, 0, 327692, 71, 0, 393233, 24, 0, 458763, 19, 0, 524292, 72, 0, 524306, 72, 0, 589830, 71, 0, 851965, 14, 0, 851967, 70, 0, 786449, 14, 0, 917499, 55, 0, 851984, 70, 0, 851987, 56, 0, 917513, 72, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 480, 352 )

[node name="StartingPoint" type="Position2D" parent="."]
position = Vector2( 480, 352 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Explanation" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0823529, 0.0823529, 0.882353 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Explanation"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 100
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Explanation/MarginContainer"]
margin_left = 20.0
margin_top = 100.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Label" type="Label" parent="CanvasLayer/Explanation/MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "CORRECT! Why?"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Explanation/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 984.0
margin_bottom = 421.0
size_flags_vertical = 3
stretch_mode = 4

[node name="CloseExplanationBtn" type="Button" parent="CanvasLayer/Explanation/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_left = 417.0
margin_top = 425.0
margin_right = 566.324
margin_bottom = 480.251
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
